added flex containers to css and changed archive page to flex

--- a/ti.css
+++ b/ti.css
@@ -4,33 +4,28 @@
   --archive-image-width: calc(var(--image-width) / 2);
   --archive-image-height: calc(var(--image-height) / 2);
 }
+
 body {
     background-color: lightblue;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 75%;
 }
-	.container {
+
+.container {
 		position: absolute;
 }
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
 
-  .column {
-    flex: 10%;
-    max-width: 10%;
-    padding: 0 4px;
-  }
+.flex-container {
+  display: flex;
+  flex-wrap:  wrap;
+  justify-content: space-between;
+}
 
-  .column img {
-    vertical-align: middle;
-    width: var(--archive-image-width);
-    height: var(--archive-image-height);
-  }
+.flex-container > div {
+  margin: 10px;
+}
 
-  .bottomleft {
+.bottomleft {
     color: white;
     position: relative;
     bottom: 24px;
@@ -38,7 +33,7 @@ body {
     font-size: 18px;
 }
 
-	.bottomright {
+.bottomright {
     position: relative;
     bottom: 44px;
     left: calc(var(--image-width) - 46px);
@@ -48,28 +43,28 @@ body {
 .archivebottomleft {
   color: white;
   position: relative;
-  bottom: 24px;
+  bottom: 14px;
   left: 1px;
-  font-size: 18px;
+  font-size: 12px;
 }
 
 .archivebottomright {
   position: relative;
-  bottom: 44px;
-  left: calc(var(--archive-image-width) - 46px);
-  font-size: 18px;
+  bottom: 28px;
+  left: calc(var(--archive-image-width) - 32px);
+  font-size: 12px;
 }
 
-	.newimg {
+.newimg {
     width: var(--image-width);
     height: var(--image-height);
 }
 
-  .oldimg {
+.oldimg {
     width: var(--archive-image-width);
     height: var(--archive-image-height);
-  }
+}
 
-    .title {
+.title {
         font-weight: bold;
-    }
+}
