--- a/ti.css
+++ b/ti.css
@@ -18,7 +18,8 @@ body {
 .flex-container {
   display: flex;
   flex-wrap:  wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  width: 80%;
 }
 
 .flex-container > div {
